templates/headlamp/templates/namespace.yaml
#@ load("@ytt:overlay", "overlay")

#@overlay/match by=overlay.all, expects="1+"
---
#@overlay/match missing_ok=True
metadata:
  #@overlay/match missing_ok=True
  namespace: headlamp

---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    namespace.kubernetes.io/name: headlamp
