templates/headlamp/templates/network_policy.yaml
#@ load("@ytt:data", "data")

#@ if data.values.dashboard.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    k8s-app: headlamp
spec:
  podSelector:
    matchLabels:
      k8s-app: headlamp
  ingress:
  - from: #! allow access for gateway-api-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: envoy-gateway-system
      podSelector: {}
    ports:
    - port: 4466
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9090
#@ end
